--- a/three/report/bibliography.bib
+++ b/three/report/bibliography.bib
@@ -23,3 +23,14 @@
   booktitle={Proc. Of Adaptive Learning Agents Workshop (ALA) in AAMAS},
   year={2009}
 }
+
+%Learning rates
+@article{even2004learning,
+  title={Learning rates for Q-learning},
+  author={Even-Dar, Eyal and Mansour, Yishay},
+  journal={The Journal of Machine Learning Research},
+  volume={5},
+  pages={1--25},
+  year={2004},
+  publisher={JMLR. org}
+}
