--- a/three/report/conclusion.tex
+++ b/three/report/conclusion.tex
@@ -14,7 +14,7 @@ Parameters settings for both algorithms were tested. For both algorithms it was 
 
 Both algorithms show that low exploration yields best results. As the algorithms learn more and more, a greedy policy starts yielding worse results. Therefore, it is important to keep exploring.
 
-The most interesting part comes from the learning rate. Both algorithms show that starting with a high learning rate and ending with a low learning rate yields best results. For optimal results, it is imperative to implement a decaying learning rate. This way, optimal results can be achieved.
+The most interesting part comes from the learning rate. Both algorithms show that starting with a high learning rate and ending with a low learning rate yields best results. For optimal results, it is imperative to implement a decaying learning rate \cite{even2004learning}. This way, optimal results can be achieved.
 
 \subsection{Minimax Q-learning}
 Draw thine conclusions and place them here. Oh Romeo, Romeo. Wherefore art thou Romeo? :'(
