--- a/three/report/ind_q_analysis.tex
+++ b/three/report/ind_q_analysis.tex
@@ -17,7 +17,9 @@ In this case, there are two predators hunting one prey. The state space is now l
 	\captionof{figure}{Independent Q-learning: 2 predators vs. 1 prey}
 \end{center}
 
-The graph shows that the predators learn to cooperate and catch the prey. This number increases, as the number of predator losses increases more slowly over time, while the number of predator wins increases more quickly over time. As this is counted cumulatively, it can be expected that the number of wins by the prey will become almost steady. It is expected that, in the end, the predators will win almost each game. As their policies are still exploratory, it is possible for two predators to bump into one another and lose the game.
+%The graph shows that the predators learn to cooperate and catch the prey. This number increases, as the number of predator losses increases more slowly over time, while the number of predator wins increases more quickly over time. As this is counted cumulatively, it can be expected that the number of wins by the prey will become almost steady. 
+
+It is expected that, in the end, the predators will win almost each game. As the policies of the predators and the prey are still exploratory, it is possible for two predators to bump into one another and lose the game.
 
 The table below shows the average number of rounds the predators need to catch the prey.
 
