--- a/three/report/minimax_q.tex
+++ b/three/report/minimax_q.tex
@@ -26,7 +26,7 @@ Then, linear programming is used to find a policy $\pi$ so that
 \end{align}
 \end{mdframed}
 
-
+Eventually, the update rules can be used to implement the minimax-Q algorithm as described in \ref{alg:minmax}.
 
 \begin{center} 
 \begin{mdframed}
