--- a/three/report/ind_q_analysis.tex
+++ b/three/report/ind_q_analysis.tex
@@ -5,23 +5,25 @@ To start off, a test was run to see if the new environment behaves as expected. 
 \begin{center}
 	\includegraphics[scale=0.3]{1_predator_1_prey_q_learning}
 	\captionof{figure}{Independent Q-learning: 1 predator versus 1 prey}
+	\label{graph:1vs1}
 \end{center}
 
-As the graph shows, the predator learns how to catch the prey more quickly after each time step. However, in the previous implementation, the number of time steps it took the predator to catch the prey became more stable. Though the number of time steps needed to catch the prey drops significantly (apparently, the $20\%$ trip rate more than offsets the intelligence of the prey), there is more variance than before. Also, the algorithm learns more quickly than before. As the state space grows exponentially with every added predator,  the state space was encoded to reduce the amount of possible states and is now of size $11^2$. Therefore, after the predator has spent enough time learning, each greedily chosen action is always in the direction of the prey. This leads to catching the prey quicker than before as there is a much smaller state space to be explored.
+As the graph in figure \ref{graph:1vs1} shows, the predator learns how to catch the prey more quickly after each time step. However, in the previous implementation, the number of time steps it took the predator to catch the prey became more stable. Though the number of time steps needed to catch the prey drops significantly (apparently, the $20\%$ trip rate more than offsets the intelligence of the prey), there is more variance than before. Also, the algorithm learns more quickly than before. As the state space grows exponentially with every added predator,  the state space was encoded to reduce the amount of possible states and is now of size $11^2$. Therefore, after the predator has spent enough time learning, each greedily chosen action is always in the direction of the prey. This leads to catching the prey quicker than before as there is a much smaller state space to be explored.
 
 \subsubsection{2 predators versus 1 prey}
-In this case, there are two predators hunting one prey. The state space is now larger than before ($11^4$ states) and leads to slower computations. Tests have shown that the amount of rounds it takes for any of the predators to catch the prey vary significantly, but more importantly, cannot be informatively represented in a graph. Therefore, the cumulative wins and losses for the predators have been graphed, rather than the amount of rounds it takes the predators to catch the prey. Unsurprisingly, the graph for wins becomes steeper, and the graph for losses becomes flat after learning. This indicates that the predators are winning more and losing less. Moreover, the numbers of rounds it takes does improve over time. These numbers have been tracked and logged in the table below.
+In this case, there are two predators hunting one prey. The state space is now larger than before ($11^4$ states) and leads to slower computations. Tests have shown that the amount of rounds it takes for any of the predators to catch the prey vary significantly, but more importantly, cannot be informatively represented in a graph. Therefore, the cumulative wins and losses for the predators have been graphed, rather than the amount of rounds it takes the predators to catch the prey. Unsurprisingly,  as shown in figure \ref{graph:2vs1}, the graph for wins becomes steeper, and the graph for losses becomes flat after learning. This indicates that the predators are winning more and losing less. Moreover, the numbers of rounds it takes does improve over time. These numbers have been tracked and logged in table \ref{table:2vs1} below.
 
 \begin{center}
 	\includegraphics[scale=0.3]{2_predators_q_learning}
 	\captionof{figure}{Independent Q-learning: 2 predators vs. 1 prey}
+	\label{graph:2vs1}
 \end{center}
 
 %The graph shows that the predators learn to cooperate and catch the prey. This number increases, as the number of predator losses increases more slowly over time, while the number of predator wins increases more quickly over time. As this is counted cumulatively, it can be expected that the number of wins by the prey will become almost steady. 
 
 It is expected that, in the end, the predators will win almost each game. As the policies of the predators and the prey are still exploratory, it is possible for two predators to bump into one another and lose the game.
 
-The table below shows the average number of rounds the predators need to catch the prey.
+The table \ref{table:2vs1} shows the average number of rounds the predators need to catch the prey.
 
 \begin{table}[H]
 \begin{center}
@@ -33,6 +35,7 @@ The table below shows the average number of rounds the predators need to catch t
 \hline
 \end{tabular}
 \caption{Average number of rounds two predators need to catch one prey}
+\label{table:2vs1}
 \end{center}
 \end{table}
 
