added hill climbing theory

--- a/three/report/Assignment3_Group4.tex
+++ b/three/report/Assignment3_Group4.tex
@@ -80,7 +80,8 @@ Repeat (for each episode):\\
 \subsection{Minimax Q-Learning} 
 \input{minimax_q}
 
-
+\subsection{Policy Hill Climbing} 
+\input{policy_hill_climbing}
 
 \begin{comment}
 Initialize:
