--- a/three/report/bibliography.bib
+++ b/three/report/bibliography.bib
@@ -34,3 +34,14 @@
   year={2004},
   publisher={JMLR. org}
 }
+
+@inproceedings{bowling2001rational,
+  title={Rational and convergent learning in stochastic games},
+  author={Bowling, Michael and Veloso, Manuela},
+  booktitle={International joint conference on artificial intelligence},
+  volume={17},
+  number={1},
+  pages={1021--1026},
+  year={2001},
+  organization={LAWRENCE ERLBAUM ASSOCIATES LTD}
+}
